--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
            <!-- Navigation-->
-           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+           <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
             <div class="container px-5">
               <a class="navbar-brand" href="index.html">Sheesh Anime</a>
               <form class="d-flex">
@@ -33,37 +33,37 @@
                         <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Genre</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                <li><a class="dropdown-item" href="action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="adventure.html">Adventure</a></li>
-                                <li><a class="dropdown-item" href="biology in fiction.html">Biology in Fiction</a></li>
-                                <li><a class="dropdown-item" href="comedy.html">Comedy</a></li>
-                                <li><a class="dropdown-item" href="crime.html">Crime</a></li>
-                                <li><a class="dropdown-item" href="dark fantasy.html">Dark Fantasy</a></li>
-                                <li><a class="dropdown-item" href="drama.html">Drama</a></li>
-                                <li><a class="dropdown-item" href="fantasy.html">Fantasy</a></li>
-                                <li><a class="dropdown-item" href="fiction.html">Fiction</a></li>
-                                <li><a class="dropdown-item" href="gambling.html">Gambling</a></li>
-                                <li><a class="dropdown-item" href="historical.html">Historical</a></li>
-                                <li><a class="dropdown-item" href="horror.html">Horror</a></li>
-                                <li><a class="dropdown-item" href="isekai.html">Isekai</a></li>
-                                <li><a class="dropdown-item" href="mecha.html">Mecha</a></li>
-                                <li><a class="dropdown-item" href="military.html">Military</a></li>
-                                <li><a class="dropdown-item" href="mystery.html">Mystery</a></li>
-                                <li><a class="dropdown-item" href="occult.html">Occult</a></li>
-                                <li><a class="dropdown-item" href="psychological.html">Psychological</a></li>
-                                <li><a class="dropdown-item" href="romance.html">Romance</a></li>
-                                <li><a class="dropdown-item" href="school.html">School</a></li>
-                                <li><a class="dropdown-item" href="sci-fi.html">Sci-Fi</a></li>
-                                <li><a class="dropdown-item" href="seinen.html">Seinen</a></li>
-                                <li><a class="dropdown-item" href="shoujo.html">Shoujo</a></li>
-                                <li><a class="dropdown-item" href="shounen.html">Shounen</a></li>
-                                <li><a class="dropdown-item" href="slice of life.html">Slice of Life</a></li>
-                                <li><a class="dropdown-item" href="sports.html">Sports</a></li>
-                                <li><a class="dropdown-item" href="spy.html">Spy</a></li>
-                                <li><a class="dropdown-item" href="supernatural.html">Supernatural</a></li>
-                                <li><a class="dropdown-item" href="super power.html">Super Power</a></li>
-                                <li><a class="dropdown-item" href="thriller.html">Thriller</a></li>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio" id="dropdown-menu-width">
+                                <li class="list-item"><a class="dropdown-item" href="action.html">Action</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="adventure.html">Adventure</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="biology in fiction.html">Biology in Fiction</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="comedy.html">Comedy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="crime.html">Crime</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="dark fantasy.html">Dark Fantasy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="drama.html">Drama</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="fantasy.html">Fantasy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="fiction.html">Fiction</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="gambling.html">Gambling</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="historical.html">Historical</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="horror.html">Horror</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="isekai.html">Isekai</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="mecha.html">Mecha</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="military.html">Military</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="mystery.html">Mystery</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="occult.html">Occult</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="psychological.html">Psychological</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="romance.html">Romance</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="school.html">School</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="sci-fi.html">Sci-Fi</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="seinen.html">Seinen</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="shoujo.html">Shoujo</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="shounen.html">Shounen</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="slice of life.html">Slice of Life</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="sports.html">Sports</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="spy.html">Spy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="supernatural.html">Supernatural</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="super power.html">Super Power</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="thriller.html">Thriller</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -86,10 +86,8 @@
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Question #1</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the first item's accordion body.</strong> <br>
-                                            It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>Why can't I watch anime here?</strong> <br>
+                                            It is just for aesthetics and I am still a noob in coding.
                                         </div>
                                     </div>
                                 </div>
@@ -97,10 +95,8 @@
                                     <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Question Item #2</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the second item's accordion body.</strong> <br>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>How can I make a website like this?</strong> <br>
+                                            Copy and Paste.
                                         </div>
                                     </div>
                                 </div>
@@ -108,25 +104,21 @@
                                     <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Question Item #3</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the third item's accordion body.</strong> <br>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>Can I watch here anime like... you know???</strong> <br>
+                                           NO.
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <!-- FAQ Accordion 2-->
-                            <h2 class="fw-bolder mb-3">About Me</h2>
+                            <h2 class="fw-bolder mb-3">About The Developer</h2>
                             <div class="accordion mb-5 mb-xl-0" id="accordionExample2">
                                 <div class="accordion-item">
                                     <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">Question Item #1</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne2" aria-labelledby="headingOne" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the first item's accordion body.</strong><br>
-                                            It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>Why did you make this website?</strong><br>
+                                            For school purposes.
                                         </div>
                                     </div>
                                 </div>
@@ -134,10 +126,8 @@
                                     <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">Question Item #2</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseTwo2" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the second item's accordion body.</strong><br>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>Who helped you build this website?</strong><br>
+                                            Me and Google.
                                         </div>
                                     </div>
                                 </div>
@@ -145,10 +135,8 @@
                                     <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree2" aria-expanded="false" aria-controls="collapseThree2">Question Item #3</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseThree2" aria-labelledby="headingThree" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the third item's accordion body.</strong><br>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>Why is the developer so cute?</strong><br>
+                                            Nothing new.
                                         </div>
                                     </div>
                                 </div>
