--- a/school.html
+++ b/school.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>School</title>
+        <title>Genre - School</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -16,60 +16,60 @@
     <body class="d-flex flex-column bg-custom">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container px-5">
-                  <a class="navbar-brand" href="index.html">Sheesh Anime</a>
-                  <form class="d-flex">
-                    <input class="form-control me-2" type="search" id="searchBar" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="latest-updates.html">Latest Updates</a></li>
-                            <li class="nav-item"><a class="nav-link" href="most popular.html">Most Popular</a></li>
-                            <li class="nav-item"><a class="nav-link" href="hunterxhunter/hunter.html">About Me</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Genre</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="action.html">Action</a></li>
-                                    <li><a class="dropdown-item" href="adventure.html">Adventure</a></li>
-                                    <li><a class="dropdown-item" href="biology in fiction.html">Biology in Fiction</a></li>
-                                    <li><a class="dropdown-item" href="comedy.html">Comedy</a></li>
-                                    <li><a class="dropdown-item" href="crime.html">Crime</a></li>
-                                    <li><a class="dropdown-item" href="dark fantasy.html">Dark Fantasy</a></li>
-                                    <li><a class="dropdown-item" href="drama.html">Drama</a></li>
-                                    <li><a class="dropdown-item" href="fantasy.html">Fantasy</a></li>
-                                    <li><a class="dropdown-item" href="fiction.html">Fiction</a></li>
-                                    <li><a class="dropdown-item" href="gambling.html">Gambling</a></li>
-                                    <li><a class="dropdown-item" href="historical.html">Historical</a></li>
-                                    <li><a class="dropdown-item" href="horror.html">Horror</a></li>
-                                    <li><a class="dropdown-item" href="isekai.html">Isekai</a></li>
-                                    <li><a class="dropdown-item" href="mecha.html">Mecha</a></li>
-                                    <li><a class="dropdown-item" href="military.html">Military</a></li>
-                                    <li><a class="dropdown-item" href="mystery.html">Mystery</a></li>
-                                    <li><a class="dropdown-item" href="occult.html">Occult</a></li>
-                                    <li><a class="dropdown-item" href="psychological.html">Psychological</a></li>
-                                    <li><a class="dropdown-item" href="romance.html">Romance</a></li>
-                                    <li><a class="dropdown-item" href="school.html">School</a></li>
-                                    <li><a class="dropdown-item" href="sci-fi.html">Sci-Fi</a></li>
-                                    <li><a class="dropdown-item" href="seinen.html">Seinen</a></li>
-                                    <li><a class="dropdown-item" href="shoujo.html">Shoujo</a></li>
-                                    <li><a class="dropdown-item" href="shounen.html">Shounen</a></li>
-                                    <li><a class="dropdown-item" href="slice of life.html">Slice of Life</a></li>
-                                    <li><a class="dropdown-item" href="sports.html">Sports</a></li>
-                                    <li><a class="dropdown-item" href="spy.html">Spy</a></li>
-                                    <li><a class="dropdown-item" href="supernatural.html">Supernatural</a></li>
-                                    <li><a class="dropdown-item" href="super power.html">Super Power</a></li>
-                                    <li><a class="dropdown-item" href="thriller.html">Thriller</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+           <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
+            <div class="container px-5">
+              <a class="navbar-brand" href="index.html">Sheesh Anime</a>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" id="searchBar" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="latest-updates.html">Latest Updates</a></li>
+                        <li class="nav-item"><a class="nav-link" href="most popular.html">Most Popular</a></li>
+                        <li class="nav-item"><a class="nav-link" href="hunterxhunter/hunter.html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Genre</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio" id="dropdown-menu-width">
+                                <li class="list-item"><a class="dropdown-item" href="action.html">Action</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="adventure.html">Adventure</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="biology in fiction.html">Biology in Fiction</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="comedy.html">Comedy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="crime.html">Crime</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="dark fantasy.html">Dark Fantasy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="drama.html">Drama</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="fantasy.html">Fantasy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="fiction.html">Fiction</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="gambling.html">Gambling</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="historical.html">Historical</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="horror.html">Horror</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="isekai.html">Isekai</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="mecha.html">Mecha</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="military.html">Military</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="mystery.html">Mystery</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="occult.html">Occult</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="psychological.html">Psychological</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="romance.html">Romance</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="school.html">School</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="sci-fi.html">Sci-Fi</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="seinen.html">Seinen</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="shoujo.html">Shoujo</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="shounen.html">Shounen</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="slice of life.html">Slice of Life</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="sports.html">Sports</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="spy.html">Spy</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="supernatural.html">Supernatural</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="super power.html">Super Power</a></li>
+                                <li class="list-item"><a class="dropdown-item" href="thriller.html">Thriller</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
         <!-- Header-->
         <header class="bg-dark py-0 mt-5">
             <div class="container px-5">
