--- a/hunterxhunter/hunter.html
+++ b/hunterxhunter/hunter.html
@@ -73,10 +73,10 @@
     </style>
 </head>
 <body>
-        <a href="resume/webpage.html"><img class="gon" src="gon.jpg"></a>
-        <a href="resume/webpage.html"><img class="killua" src="killua.jpg"></a>
-        <a href="resume/webpage.html"><img class="kurapika" src="kurapika.jpg"></a>
-        <a href="resume/webpage.html"><img class="leorio" src="leorio.jpg"></a>
-        <a href="resume/webpage.html"><img class="logo" src="logo.png"></a>
+        <a href="webpage.jpg"><img class="gon" src="gon.jpg"></a>
+        <a href="webpage.jpg"><img class="killua" src="killua.jpg"></a>
+        <a href="webpage.jpg"><img class="kurapika" src="kurapika.jpg"></a>
+        <a href="webpage.jpg"><img class="leorio" src="leorio.jpg"></a>
+        <a href="webpage.jpg"><img class="logo" src="logo.png"></a>
 </body>
 </html>
